# scACCorDiON

./: .gitignore  .python-version  .readthedocs.yml  LICENSE.md  NEWS.md  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-package.yml
accordion/: Accordion.py  KBarycenters.py  distances.py  pdac.py  utils.py
docs/: requirements.txt
docs/source/: Global_Local_Comparison.md  Installation.md  PDAC_FullTutorial.md  SingleCellDemo.md  api.md  conf.py  index.md  index.rst
scaccordion/: __init__.py  pl.py
scaccordion/data/: PDAC_differential.csv  Peng_PDAC_metaacc.h5ad  Peng_PDAC_metaacc.pickle  glexample.hdf
scaccordion/plots/: __init__.py  accplots.py
scaccordion/tools/: Accordion.py  GOT.py  GWOT.py  KBarycenters.py  __init__.py  datasets.py  distances.py  utils.py
tests/: test_GOT.py  test_GWOT.py  test_accordion.py  test_datasets.py
tutorials/: 06032024-MI_BarycentervsMedoids.ipynb  ACCorDiON_test.ipynb  DirectedEffectiveResistanceDistance-Section4-Part2.ipynb  Global_Local_Comparison.ipynb  Run_scACCorDiON.ipynb  SBM_Comparison.ipynb  Tutorial-aCCORDiON.ipynb
tutorials/.ipynb_checkpoints/: 060324-PDAC_Interpretation-checkpoint.ipynb  ACCorDiON_test-checkpoint.ipynb  DGWOT-StructuralComparison-checkpoint.ipynb  DirectedGraphCost-checkpoint.ipynb  GW_Scaling_test-checkpoint.ipynb  GW_trials-checkpoint.ipynb  Global_Local_Comparison-MagneticLaplacianFiltering-checkpoint.ipynb  Global_Local_Comparison-Penalized-Cost-checkpoint.ipynb  Global_Local_Comparison-Rankingbased'-checkpoint.ipynb  Lupus-checkpoint.ipynb  MI-checkpoint.ipynb  PDAC-Learning-distances-and-Clustering-checkpoint.ipynb  PDAC-edge-time-averaging-checkpoint.ipynb  PDAC-fromScratch-checkpoint.ipynb  (+4 more)
(+51 files in other folders)
