[tool.poetry]
name = "accordion"
version = "0.1.3"
description = ""
authors = ["James Nagai <james.nagai@gmail.com>"]
readme = "README.md"
include = [
    { path = "data/"},
]


[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "1.1.2"
matplotlib = "3.6.0rc1"
seaborn = "0.12.0"
pot = "0.8.2"
rpy2 = "3.5.10"
pydiffmap = "0.2.0.1"
networkx = "2.8.8"
tqdm = "4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
