[tool.poetry]
name = "scaccordion"
version = "0.2.0.1"
description = ""
authors = ["James Nagai <james.nagai@gmail.com>"]
readme = "README.md"
include = [
    { path = "data/"},
]


[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.1.2"
matplotlib = "3.8.3"
seaborn = "0.13.2"
pot = "0.8.2"
rpy2 = "3.5.10"
pydiffmap = "0.2.0.1"
networkx = "2.8.8"
tqdm = "4.64.1"
tables = "^3.9.1"
skimpy = "^0.0.14"
phate = "^1.0.11"
conorm = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
