[tool.poetry]
name = "scaccordion"
version = "0.2.1.5"
description = ""
authors = ["James Nagai <james.nagai@gmail.com>"]
readme = "README.md"
include = [
    { path = "data/"},
]


[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "1.5.2"
matplotlib = "^3.9.1"
seaborn = "0.13.2"
pot = "^0.9.4"
rpy2 = "3.5.10"
pydiffmap = "0.2.0.1"
networkx = "^3.3"
tqdm = "4.66.5"
tables = "^3.9.1"
skimpy = "^0.0.14"
phate = "^1.0.11"
conorm = "^1.2.0"
scipy = "^1.6.0"
numpy="^1.24"
genieclust="1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
